made some minor spacing fixes

--- a/bin/style.css
+++ b/bin/style.css
@@ -219,3 +219,8 @@ li.active-item  .checkbox {
 .col-4 button:hover {
     border-color: #000000;
 }
+
+.list-buttons {
+    display: flex;
+    justify-content: space-between;
+}
